# vanchuyen

./: .gitignore  README.md  hello  license.txt  pyproject.toml
docs/: build-brief-vanchuyen.md
docs/legacy/: Fields.csv  quan-ly-van-chuyen.html
vanchuyen/: hooks.py  install.py  modules.txt  patches.txt
vanchuyen/api/: chi_cuoc.py  dieu_hanh.py  dieu_phoi.py  guards.py  lai_xe.py  nhap_don.py  su_co.py  to_truong.py  tong_quan.py
vanchuyen/fixtures/: custom_field.json  print_format.json  role.json
vanchuyen/patches/: seed_cuoc_chuyen.py
vanchuyen/public/vanchuyen/: shell.css  shell.js
vanchuyen/public/vanchuyen/components/: confirm.js  data-table.js  modal.js  toast.js
vanchuyen/public/vanchuyen/lib/: api.js  dom.js  format.js  router.js
vanchuyen/public/vanchuyen/views/: chuyen-detail.js  chuyen.js  dieu-phoi.js  nhap-don.js  quy-dau.js  su-co.js  tai-khoan.js  tong-quan.js  tra-cuoc.js  xep-chuyen.js
vanchuyen/van_chuyen/doctype/chuyen_xe/: chuyen_xe.json  chuyen_xe.py
vanchuyen/van_chuyen/doctype/chuyen_xe_don_hang/: chuyen_xe_don_hang.json  chuyen_xe_don_hang.py
vanchuyen/van_chuyen/doctype/cuoc_chuyen/: cuoc_chuyen.json  cuoc_chuyen.py
vanchuyen/van_chuyen/doctype/su_co_van_chuyen/: su_co_van_chuyen.json  su_co_van_chuyen.py
vanchuyen/www/: vc.html  vc.py
