[project]
name = "vanchuyen"
authors = [
    { name = "Rong Vang Hoang Gia", email = "it@rongvanghoanggia.com" }
]
description = "Quan ly chuyen xe & giao hang tu van chuyen"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "vanchuyen"
